@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3741 2003/10/27 13:25:05 salo Exp $
+$NetBSD: CHANGES,v 1.3742 2003/10/27 16:55:32 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4255,3 +4255,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated bind9 to 9.2.3 [itojun 2003-10-27]
 	Updated silc-client to 0.9.14 [salo 2003-10-27]
 	Updated silc-client-icb to 0.14nb3 [salo 2003-10-27]
+	Updated vtun to 2.6nb1 [hubertf 2003-10-27]
